# PIF-DSBMM-DPF

./: pyproject.toml  setup.cfg
src/citation/: process_dataset.py  run_experiment.py  utils.py
src/model/: multi_cause_influence.py
src/pif_dsbmm_dpf/citation/: citation_paper_results.ipynb  predictive_check.py  process_dataset.py  run_experiment.py  run_sensitivity_study.py  utils.py
src/pif_dsbmm_dpf/citation/results/: alt-semi-synth.tex  auth-synth-ppcs.tex  ex-auth-synth-ppcs.tex  ex-topic-synth-ppcs.tex  pres-A-alt-semi-synth.tex  pres-A-semi-synth.tex  semi-synth.tex  topic-synth-aucs.tex  topic-synth-ppcs.tex
src/pif_dsbmm_dpf/citation/submit_scripts/: run_paper_experiment.sh  submit_paper_experiment.sh  submit_pred_checks.sh
src/pif_dsbmm_dpf/citation/submit_scripts/cluster_jobs/: run_sensitivity_experiment.sh  submit_low_inf_experiment.sh  submit_paper_experiment.sh
src/pif_dsbmm_dpf/citation_real/: predictive_check.py  process_real.py  real_results.ipynb  run_paper_experiment.py
src/pif_dsbmm_dpf/citation_real/results/: real_av_infl_rate.tex  real_results.tex
src/pif_dsbmm_dpf/lastfm/: lastfm_utils.py  process_lastfm.py  run_paper_experiment.py
src/pif_dsbmm_dpf/model/: joint_factor_model.py  multi_cause_influence.py  network_model.py  pmf.py  spf.py
