[metadata]
name = pif_dsbmm_dpf
version = 0.0.1
author = John Fitzgerald
author_email = j.a.fitzgerald@outlook.com
description = Poisson dynamic influence factorisation with DSBMM and dPF substitutes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fitzgeraldja/PIF-DSBMM-DPF
project_urls =
    Bug Tracker = https://github.com/fitzgeraldja/PIF-DSBMM-DPF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
